Legger til enable-preview i surefire config